INCLUDE_DIRECTORIES(
        ../include
        ../sql
        ../storage/xtradb/api
        ../storage/xtradb/btr
        ../storage/xtradb/buf
        ../storage/xtradb/data
        ../storage/xtradb/dict
        ../storage/xtradb/dyn
        ../storage/xtradb/eval
        ../storage/xtradb/fil
        ../storage/xtradb/fsp
        ../storage/xtradb/fut
        ../storage/xtradb/ha
        ../storage/xtradb/fts
        ../storage/xtradb/handler
        ../storage/xtradb/ibuf
        ../storage/xtradb/include
        ../storage/xtradb/lock
        ../storage/xtradb/log
        ../storage/xtradb/mach
        ../storage/xtradb/mem
        ../storage/xtradb/mtr
        ../storage/xtradb/os
        ../storage/xtradb/page
        ../storage/xtradb/pars
        ../storage/xtradb/que
        ../storage/xtradb/read
        ../storage/xtradb/rem
        ../storage/xtradb/row
        ../storage/xtradb/srv
        ../storage/xtradb/sync
        ../storage/xtradb/trx
        ../storage/xtradb/usr
        ../storage/xtradb/ut
        )

ADD_EXECUTABLE(first first-t.cc ../storage/xtradb/api/api0api.cc
        ../storage/xtradb/api/api0misc.cc
        ../storage/xtradb/btr/btr0btr.cc
        ../storage/xtradb/btr/btr0cur.cc
        ../storage/xtradb/btr/btr0pcur.cc
        ../storage/xtradb/btr/btr0scrub.cc
        ../storage/xtradb/btr/btr0sea.cc
        ../storage/xtradb/btr/btr0defragment.cc
        ../storage/xtradb/buf/buf0buddy.cc
        ../storage/xtradb/buf/buf0buf.cc
        ../storage/xtradb/buf/buf0dblwr.cc
        ../storage/xtradb/buf/buf0checksum.cc
        ../storage/xtradb/buf/buf0dump.cc
        ../storage/xtradb/buf/buf0flu.cc
        ../storage/xtradb/buf/buf0lru.cc
        ../storage/xtradb/buf/buf0rea.cc
        ../storage/xtradb/buf/buf0mtflu.cc
        ../storage/xtradb/data/data0data.cc
        ../storage/xtradb/data/data0type.cc
        ../storage/xtradb/dict/dict0boot.cc
        ../storage/xtradb/dict/dict0crea.cc
        ../storage/xtradb/dict/dict0dict.cc
        ../storage/xtradb/dict/dict0load.cc
        ../storage/xtradb/dict/dict0mem.cc
        ../storage/xtradb/dict/dict0stats.cc
        ../storage/xtradb/dict/dict0stats_bg.cc
        ../storage/xtradb/dyn/dyn0dyn.cc
        ../storage/xtradb/eval/eval0eval.cc
        ../storage/xtradb/eval/eval0proc.cc
        ../storage/xtradb/fil/fil0fil.cc
        ../storage/xtradb/fil/fil0pagecompress.cc
        ../storage/xtradb/fil/fil0crypt.cc
        ../storage/xtradb/fsp/fsp0fsp.cc
        ../storage/xtradb/fut/fut0fut.cc
        ../storage/xtradb/fut/fut0lst.cc
        ../storage/xtradb/ha/ha0ha.cc
        ../storage/xtradb/ha/ha0storage.cc
        ../storage/xtradb/ha/hash0hash.cc
        ../storage/xtradb/fts/fts0fts.cc
        ../storage/xtradb/fts/fts0ast.cc
        ../storage/xtradb/fts/fts0blex.cc
        ../storage/xtradb/fts/fts0config.cc
        ../storage/xtradb/fts/fts0opt.cc
        ../storage/xtradb/fts/fts0pars.cc
        ../storage/xtradb/fts/fts0que.cc
        ../storage/xtradb/fts/fts0sql.cc
        ../storage/xtradb/fts/fts0tlex.cc
        ../storage/xtradb/handler/ha_innodb.cc
        ../storage/xtradb/handler/handler0alter.cc
        ../storage/xtradb/handler/i_s.cc
        ../storage/xtradb/handler/xtradb_i_s.cc
        ../storage/xtradb/ibuf/ibuf0ibuf.cc
        ../storage/xtradb/include/os0sync.h
        ../storage/xtradb/lock/lock0iter.cc
        ../storage/xtradb/lock/lock0lock.cc
        ../storage/xtradb/lock/lock0wait.cc
        ../storage/xtradb/log/log0log.cc
        ../storage/xtradb/log/log0online.cc
        ../storage/xtradb/log/log0recv.cc
        ../storage/xtradb/log/log0crypt.cc
        ../storage/xtradb/mach/mach0data.cc
        ../storage/xtradb/mem/mem0mem.cc
        ../storage/xtradb/mem/mem0pool.cc
        ../storage/xtradb/mtr/mtr0log.cc
        ../storage/xtradb/mtr/mtr0mtr.cc
        ../storage/xtradb/os/os0file.cc
        ../storage/xtradb/os/os0proc.cc
        ../storage/xtradb/os/os0sync.cc
        ../storage/xtradb/os/os0thread.cc
        ../storage/xtradb/os/os0stacktrace.cc
        ../storage/xtradb/page/page0cur.cc
        ../storage/xtradb/page/page0page.cc
        ../storage/xtradb/page/page0zip.cc
        ../storage/xtradb/pars/lexyy.cc
        ../storage/xtradb/pars/pars0grm.cc
        ../storage/xtradb/pars/pars0opt.cc
        ../storage/xtradb/pars/pars0pars.cc
        ../storage/xtradb/pars/pars0sym.cc
        ../storage/xtradb/que/que0que.cc
        ../storage/xtradb/read/read0read.cc
        ../storage/xtradb/rem/rem0cmp.cc
        ../storage/xtradb/rem/rem0rec.cc
        ../storage/xtradb/row/row0ext.cc
        ../storage/xtradb/row/row0ftsort.cc
        ../storage/xtradb/row/row0import.cc
        ../storage/xtradb/row/row0ins.cc
        ../storage/xtradb/row/row0merge.cc
        ../storage/xtradb/row/row0mysql.cc
        ../storage/xtradb/row/row0log.cc
        ../storage/xtradb/row/row0purge.cc
        ../storage/xtradb/row/row0row.cc
        ../storage/xtradb/row/row0sel.cc
        ../storage/xtradb/row/row0uins.cc
        ../storage/xtradb/row/row0umod.cc
        ../storage/xtradb/row/row0undo.cc
        ../storage/xtradb/row/row0upd.cc
        ../storage/xtradb/row/row0quiesce.cc
        ../storage/xtradb/row/row0vers.cc
        ../storage/xtradb/srv/srv0conc.cc
        ../storage/xtradb/srv/srv0mon.cc
        ../storage/xtradb/srv/srv0srv.cc
        ../storage/xtradb/srv/srv0start.cc
        ../storage/xtradb/sync/sync0arr.cc
        ../storage/xtradb/sync/sync0rw.cc
        ../storage/xtradb/sync/sync0sync.cc
        ../storage/xtradb/trx/trx0i_s.cc
        ../storage/xtradb/trx/trx0purge.cc
        ../storage/xtradb/trx/trx0rec.cc
        ../storage/xtradb/trx/trx0roll.cc
        ../storage/xtradb/trx/trx0rseg.cc
        ../storage/xtradb/trx/trx0sys.cc
        ../storage/xtradb/trx/trx0trx.cc
        ../storage/xtradb/trx/trx0undo.cc
        ../storage/xtradb/usr/usr0sess.cc
        ../storage/xtradb/ut/ut0bh.cc
        ../storage/xtradb/ut/ut0byte.cc
        ../storage/xtradb/ut/ut0crc32.cc
        ../storage/xtradb/ut/ut0dbg.cc
        ../storage/xtradb/ut/ut0list.cc
        ../storage/xtradb/ut/ut0mem.cc
        ../storage/xtradb/ut/ut0rbt.cc
        ../storage/xtradb/ut/ut0rnd.cc
        ../storage/xtradb/ut/ut0ut.cc
        ../storage/xtradb/ut/ut0vec.cc
        ../storage/xtradb/ut/ut0wqueue.cc)
ADD_TEST(firsttest first)